# DeepFedNAS

./: .gitignore  parse_args.py  pyproject.toml  readme.md  train.py
configs/supernets/: 4-stage-supernet-baseline.json  4-stage-supernet-deepfednas.json
experiments/01_baseline/: cifar10.sh  cifar100.sh  cinic10.sh  continue_example_cinic10.sh  continue_training_example.sh
experiments/02_deepfednas/: cifar10.sh  cifar100.sh  cinic10.sh  continue_training_example-cinic10.sh  continue_training_example.sh
misc_utils/: get_supernet_bounds.py  provide_training_validation_set_from_cache.py  random_subnet_cache_generator.py
scripts/cache_generation/: run_subnet_cache_generation.sh
scripts/data_setup/: download_cifar10.sh  download_cifar100.sh  download_cinic10.sh
scripts/evaluation/: accuracy_vs_parms.py  analyze_supernet.py  analyze_supernets.py  find_subnet_for_macs.py
scripts/search/: baseline_search.py  deepfednas_search.py  latency_predictor_pipeline.py
src/deepfednas/Client/: client_model.py  client_trainer.py  subnet_trainer.py
src/deepfednas/Server/: base_server_model.py  deepfednas_trainer.py  generic_server_model.py
src/deepfednas/data/cifar10/: data_loader.py
src/deepfednas/data/cifar100/: data_loader.py
src/deepfednas/data/cinic10/: data_loader.py
src/deepfednas/elastic_nn/: generic_ofa_network.py
src/deepfednas/nas/: deepfednas_fitness_maximizer.py  generate_subnet_cache.py
src/deepfednas/utils/: subnet_cost.py
subnet_caches/: 4_stage_cache_60_subnets_p1024_g1024_w-fine-grained.csv
